--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,14 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a href="#" class="navbar-brand">Wikinimous</a>
+          <a href="/articles/new" class="navbar-right">New Article</a>
+        </div>
+      </div>
+    </nav>
     <%= yield %>
   </body>
 </html>
