--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Articles#show</h1>
-<p>Find me in app/views/articles/show.html.erb</p>
+<div class="card">
+  <h3><%= @article[:title] %></h3>
+  <p><%= @article[:content]  %></p>
+  <%= link_to "Edit", edit_article_path(@article) %>
+  <%= link_to "Back to list", articles_path %>
+</div>
